syntax = "proto3";

package handy;

option go_package = "data";

message TaskInfo {
  string requester_id = 1;

  string master_id = 2;

  string title = 3;

  string description = 4;
}
